--- a/dashboard/views/server.ejs
+++ b/dashboard/views/server.ejs
@@ -9,8 +9,8 @@
 
             <div>
                 <div class="text-center">
-                    <p class="dark:text-white text-black"><%= req.__("dashboard.server.infoServer") %> <%= server.name %> (<%= server.id %>)</p>
-                    <p class="dark:text-white text-black"><%= req.data.games.filter(game => game.guildOrChat.type === "guild" && game.guildOrChat.data.id === server.id).size %> <%= req.__("dashboard.server.partyPlayed") %></p>
+                    <p class="dark:text-white text-black"><%= res.__("dashboard.server.infoServer") %> <%= server.name %> (<%= server.id %>)</p>
+                    <p class="dark:text-white text-black"><%= req.data.games.filter(game => game.guildOrChat.type === "guild" && game.guildOrChat.data.id === server.id).size %> <%= res.__("dashboard.server.partyPlayed") %></p>
                 
                     <% 
                         let playedGame = {} 
@@ -46,12 +46,12 @@
                         const smallestPlayerGame = Object.keys(countPlayerGame).reduce((a, b) => countPlayerGame.count[a] < countPlayerGame.count[b] ? a : b)
                     %>
 
-                    <p class="dark:text-white text-black"><i class="fas fa-arrow-up text-green"></i><%= req.__("dashboard.server.highestPlayedGame") %> <%= highestPlayedGame %> <%= req.__("dashboard.server.with") %> <%= playedGame[highestPlayedGame] %> <%= req.__("dashboard.server.party") %></p>
-                    <p class="dark:text-white text-black"><i class="fas fa-arrow-down text-red"></i><%= req.__("dashboard.server.smallerPlayedGame") %> <%= smallerPlayedGame %> <%= req.__("dashboard.server.with") %> <%= playedGame[smallerPlayedGame] %> <%= req.__("dashboard.server.party") %></p>
-                    <p class="dark:text-white text-black"><i class="fas fa-arrow-up text-green"></i><%= req.__("dashboard.server.highestPlayerGame") %> <a href="/server"><%= highestPlayerGame.username %></a> <%= req.__("dashboard.server.with") %> <%= countPlayerGame[highestPlayerGame.id] %> <%= req.__("dashboard.server.party") %></p>
-                    <p class="dark:text-white text-black"><i class="fas fa-arrow-down text-red"></i><%= req.__("dashboard.server.smallerPlayerGame") %> <a><%= smallestPlayerGame.username %></a> <%= req.__("dashboard.server.with") %> <%= countPlayerGame[smallestPlayerGame.id] %> <%= req.__("dashboard.server.party") %></p>
-                    <p class="dark:text-white text-black"><%= req.__("dashboard.server.firstPlayedGame") %> <%= firstPlayedGame %></p>
-                    <p class="dark:text-white text-black"><%= req.__("dashboard.server.lastPlayedGame") %> <%= lastPlayedGame %></p>
+                    <p class="dark:text-white text-black"><i class="fas fa-arrow-up text-green"></i><%= res.__("dashboard.server.highestPlayedGame") %> <%= highestPlayedGame %> <%= res.__("dashboard.server.with") %> <%= playedGame[highestPlayedGame] %> <%= res.__("dashboard.server.party") %></p>
+                    <p class="dark:text-white text-black"><i class="fas fa-arrow-down text-red"></i><%= res.__("dashboard.server.smallerPlayedGame") %> <%= smallerPlayedGame %> <%= res.__("dashboard.server.with") %> <%= playedGame[smallerPlayedGame] %> <%= res.__("dashboard.server.party") %></p>
+                    <p class="dark:text-white text-black"><i class="fas fa-arrow-up text-green"></i><%= res.__("dashboard.server.highestPlayerGame") %> <a href="/server"><%= highestPlayerGame.username %></a> <%= res.__("dashboard.server.with") %> <%= countPlayerGame[highestPlayerGame.id] %> <%= res.__("dashboard.server.party") %></p>
+                    <p class="dark:text-white text-black"><i class="fas fa-arrow-down text-red"></i><%= res.__("dashboard.server.smallerPlayerGame") %> <a><%= smallestPlayerGame.username %></a> <%= res.__("dashboard.server.with") %> <%= countPlayerGame[smallestPlayerGame.id] %> <%= res.__("dashboard.server.party") %></p>
+                    <p class="dark:text-white text-black"><%= res.__("dashboard.server.firstPlayedGame") %> <%= firstPlayedGame %></p>
+                    <p class="dark:text-white text-black"><%= res.__("dashboard.server.lastPlayedGame") %> <%= lastPlayedGame %></p>
                 </div>
             </div>
         </div>
