--- a/dashboard/views/index.ejs
+++ b/dashboard/views/index.ejs
@@ -27,10 +27,10 @@
                     <div class="group flex items-center justify-center">
                         <div class="grid grid-cols-1 lg:grid-cols-2 bg-white-secondary dark:bg-gray-secondary h-80 w-10/12 m-10 rounded-3xl group-hover:transition duration-500 ease-in-out group-hover:rounded-md dark:group-hover:bg-gray-third group-hover:bg-white-third">
                             <div class="flex items-center justify-center">
-                                <p>Image</p>
+                                <p><%= res.__("dashboard.index.img") %></p>
                             </div>
                             <div class="flex items-center justify-center">
-                                <p>Petit texte</p>
+                                <p><%= res.__("dashboard.index.littleText") %></p>
                             </div>
                         </div>
                     </div>
@@ -40,10 +40,10 @@
                     <div class="group flex items-center justify-center">
                         <div class="grid grid-cols-1 lg:grid-cols-2 bg-white-secondary dark:bg-gray-secondary h-80 w-10/12 m-10 rounded-3xl group-hover:transition duration-500 ease-in-out group-hover:rounded-md dark:group-hover:bg-gray-third group-hover:bg-white-third">
                             <div class="flex items-center justify-center">
-                                <p>Image</p>
+                                <p><%= res.__("dashboard.index.img") %></p>
                             </div>
                             <div class="flex items-center justify-center">
-                                <p>Petit texte</p>
+                                <p><%= res.__("dashboard.index.littleText") %></p>
                             </div>
                         </div>
                     </div>
