--- a/dashboard/views/settings.ejs
+++ b/dashboard/views/settings.ejs
@@ -11,7 +11,7 @@
                 <div class="group">
                     <div class="dark:bg-gray-secondary bg-white-secondary m-8 rounded-3xl group-hover:transition duration-500 ease-in-out group-hover:rounded-md">
                         <div class="text-center">
-                            <p class="dark:text-white text-black font-bold text-xl">Langue</p>
+                            <p class="dark:text-white text-black font-bold text-xl"><i class="fas fa-language"></i> <%= res.__("dashboard.settings.lang") %></p>
                         </div>
                         <div class="flex items-center justify-center my-1">
                             <div class="dark:bg-white-primary bg-gray-primary h-0.5 w-5/12"></div>
@@ -24,18 +24,26 @@
                                     <input type="checkbox" id="lang-<%= lang %>" <%= res.getLocale() === lang ? "checked" : "" %> class="dark:bg-gray-secondary bg-white-secondary switchLang" />
                                     <label for="lang-<%= lang %>" class="dark:text-white text-black font-bold text-xl"><%= res.__(`dashboard.settings.${lang}`) %></label>
                                 </div>
-                                <!--
-                                <div>
-                                    <input type="checkbox" id="lang-en-GB" class="dark:bg-gray-secondary bg-white-secondary switchLang" />
-                                    <label for="lang-en" class="dark:text-white text-black font-bold text-xl">Anglais</label>
-                                </div>
-                                <div>
-                                    <input type="checkbox" id="lang-de-DE" class="dark:bg-gray-secondary bg-white-secondary switchLang" />
-                                    <label for="lang-de" class="dark:text-white text-black font-bold text-xl">Allemand</label>
-                                </div>
-                                -->
-
                             <% }) %>
+                        </div>
+                    </div>
+                    <div class="dark:bg-gray-secondary bg-white-secondary m-8 rounded-3xl group-hover:transition duration-500 ease-in-out group-hover:rounded-md">
+                        <div class="text-center">
+                            <p class="text-red-dark font-bold text-xl"><i class="fas fa-exclamation-triangle"></i> <%= res.__("dashboard.settings.dangerous") %></p>
+                        </div>
+                        <div class="flex items-center justify-center my-1">
+                            <div class="dark:bg-white-primary bg-gray-primary h-0.5 w-5/12"></div>
+                        </div>
+                        <div class="p-5">
+                            <% plateformData.forEach(plateform => { %>
+                                <div class="block lg:inline-block">
+                                    <button><%= res.__("dashboard.settings.deleteAccount") %> <%= plateform.plateform %></button>
+                                </div>
+                            <% }) %>
+                            <div class="block lg:inline-block">
+                                <button><%= res.__("dashboard.settings.deleteMyAccount") %></button>
+                            </div>
+
                         </div>
                     </div>
                 </div>
