--- a/dashboard/views/server.ejs
+++ b/dashboard/views/server.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="<%= res.getLocale() %>">
     <head>
         <%- include("utils/header") %>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/charts.css/dist/charts.min.css">
     </head>
     <body class="dark:bg-gray-primary bg-white-primary transition duration-500 ease-in-out">
         <div>
@@ -9,10 +10,23 @@
 
             <div>
                 <div class="text-center">
-                    <p class="dark:text-white text-black"><%= res.__("dashboard.server.infoServer") %> <%= server.name %> (<%= server.id %>)</p>
-                    <p class="dark:text-white text-black"><%= req.data.games.filter(game => game.guildOrChat.type === "guild" && game.guildOrChat.data.id === server.id).size %> <%= res.__("dashboard.server.partyPlayed") %></p>
-                
+                    <div>
+                        <p class="dark:text-white text-black"><%= res.__("dashboard.server.infoServer") %> <%= server.name %> (<%= server.id %>)</p>
+                        <p class="dark:text-white text-black"><%= req.data.games.filter(game => game.guildOrChat.type === "guild" && game.guildOrChat.data.id === server.id).size %> <%= res.__("dashboard.server.partyPlayed") %></p>
+                    </div>
+                    <div class="flex items-center justify-center m-5">
+                        <div class="dark:bg-white-primary bg-gray-primary h-0.5 w-11/12"></div>
+                    </div>
                     <% 
+                        let lastPlayedGames = [
+                            [], //0
+                            [], //1
+                            [], //2
+                            [], //3
+                            [], //4
+                            [], //5
+                            [], //6
+                        ]
                         let playedGame = {} 
                         let countPlayerGame = {}
                         let firstPlayedGame = null
@@ -21,19 +35,26 @@
                         const games = req.data.games.filter(game => game.guildOrChat.type === "guild" && game.guildOrChat.data.id === server.id)
                         
                         games.forEach(game => {
-                            if (firstPlayedGame > game.date) firstPlayedGame = game.date
+                            if (firstPlayedGame > game.date || !firstPlayedGame) firstPlayedGame = game.date
                             if (lastPlayedGame < game.date) lastPlayedGame = game.date
                             
+                            // Dispatch gameDate by day
+                            const gameDate = new Date(game.date)
+                            const gameDay = gameDate.getDate()
+                            const todayDay = new Date().getDate()
+
+                            if (todayDay - gameDay <= 6) {
+                                lastPlayedGames[todayDay - gameDay].push(game)
+                            }
+
                             playedGame[game.gameName] = (playedGame[game.gameName] || 0) + 1
                             
                             for (let i = 0; i < game.beetween.length; i++) {
                                 const { id, username } = game.beetween[i]
 
-                                console.log(countPlayerGame)
-
-                                countPlayerGame[id.toString()] = {}
-                                countPlayerGame[id.toString()].count = (countPlayerGame[id.toString()].count || 0) + 1
-                                countPlayerGame[id.toString()].username = username
+                                if (!countPlayerGame[id]) countPlayerGame[id] = {}
+                                countPlayerGame[id].count = (countPlayerGame[id].count || 0) + 1
+                                countPlayerGame[id].username = username
                                 //countPlayerGame[player.id].id = player.id
                             }
                         })
@@ -51,12 +72,48 @@
                         const smallestPlayerGame = Object.keys(countPlayerGame).reduce((a, b) => countPlayerGame[a].count < countPlayerGame[b].count ? a : b)
                     %>
 
-                    <p class="dark:text-white text-black"><i class="fas fa-arrow-up text-green"></i><%= res.__("dashboard.server.highestPlayedGame") %> <%= highestPlayedGame %> <%= res.__("dashboard.server.with") %> <%= playedGame[highestPlayedGame] %> <%= res.__("dashboard.server.party") %></p>
-                    <p class="dark:text-white text-black"><i class="fas fa-arrow-down text-red"></i><%= res.__("dashboard.server.smallerPlayedGame") %> <%= smallerPlayedGame %> <%= res.__("dashboard.server.with") %> <%= playedGame[smallerPlayedGame] %> <%= res.__("dashboard.server.party") %></p>
-                    <p class="dark:text-white text-black"><i class="fas fa-arrow-up text-green"></i><%= res.__("dashboard.server.highestPlayerGame") %> <a href="/server"><%= highestPlayerGame.username %></a> <%= res.__("dashboard.server.with") %> <%= countPlayerGame[highestPlayerGame.id] %> <%= res.__("dashboard.server.party") %></p>
-                    <p class="dark:text-white text-black"><i class="fas fa-arrow-down text-red"></i><%= res.__("dashboard.server.smallerPlayerGame") %> <a><%= smallestPlayerGame.username %></a> <%= res.__("dashboard.server.with") %> <%= countPlayerGame[smallestPlayerGame.id] %> <%= res.__("dashboard.server.party") %></p>
-                    <p class="dark:text-white text-black"><%= res.__("dashboard.server.firstPlayedGame") %> <%= firstPlayedGame %></p>
-                    <p class="dark:text-white text-black"><%= res.__("dashboard.server.lastPlayedGame") %> <%= lastPlayedGame %></p>
+                    <div>
+                        <p class="dark:text-white text-black"><i class="fas fa-arrow-up text-green pr-2"></i><%= res.__("dashboard.server.highestPlayedGame") %> <%= highestPlayedGame %> <%= res.__("dashboard.server.with") %> <%= playedGame[highestPlayedGame] %> <%= res.__("dashboard.server.party") %></p>
+                        <p class="dark:text-white text-black"><i class="fas fa-arrow-down text-red pr-2"></i><%= res.__("dashboard.server.smallerPlayedGame") %> <%= smallerPlayedGame %> <%= res.__("dashboard.server.with") %> <%= playedGame[smallerPlayedGame] %> <%= res.__("dashboard.server.party") %></p>
+                    </div>
+                    <div class="flex items-center justify-center m-5">
+                        <div class="dark:bg-white-primary bg-gray-primary h-0.5 w-11/12"></div>
+                    </div>
+                    <div>
+                        <p class="dark:text-white text-black"><i class="fas fa-arrow-up text-green pr-2"></i><%= res.__("dashboard.server.highestPlayerGame") %> <%= countPlayerGame[highestPlayerGame].username %> <%= res.__("dashboard.server.with") %> <%= countPlayerGame[highestPlayerGame].count %> <%= res.__("dashboard.server.party") %></p>
+                        <p class="dark:text-white text-black"><i class="fas fa-arrow-down text-red pr-2"></i><%= res.__("dashboard.server.smallerPlayerGame") %> <%= countPlayerGame[smallestPlayerGame].username %> <%= res.__("dashboard.server.with") %> <%= countPlayerGame[smallestPlayerGame].count %> <%= res.__("dashboard.server.party") %></p>
+                    </div>
+                    <div class="flex items-center justify-center m-5">
+                        <div class="dark:bg-white-primary bg-gray-primary h-0.5 w-11/12"></div>
+                    </div>
+                    <div>
+                        <p class="dark:text-white text-black"><%= res.__("dashboard.server.firstPlayedGame") %> <%= req.functions.formatDate({ date: firstPlayedGame }) %></p>
+                        <p class="dark:text-white text-black"><%= res.__("dashboard.server.lastPlayedGame") %> <%= req.functions.formatDate({ date: lastPlayedGame }) %></p>
+                    </div>
+                    <div class="flex items-center justify-center m-5">
+                        <div class="dark:bg-white-primary bg-gray-primary h-0.5 w-11/12"></div>
+                    </div>
+                    <div class="w-11/12 h-52 my-0 mx-auto">
+                        <table class="charts-css column show-labels reverse-data data-spacing-5 show-heading">
+                            <caption class="dark:text-white text-black">Statistiques des 7 derniers jours</caption>
+
+                            <% lastPlayedGames.forEach((games, index) => { %>
+                                <tr>
+                                    <th scope="row" class="dark:text-white text-black">
+                                        <% if (index === 0) { %>
+                                            <%= res.__("dashboard.server.today") %>
+                                        <% } else { %> 
+                                            <%= new Date().getDate() - index %>/<%= new Date().getMonth() + 1 %>
+                                        <% } %>
+                                    </th>
+                                    <td style="--size: calc(<%= games.length + 1 %>/10)">
+                                        <span class="data dark:text-white text-black" style="line-height: 1;">
+                                            <%= games.length %>
+                                        </span> 
+                                    </td>
+                                </tr>
+                            <% }) %>
+                    </div>
                 </div>
             </div>
         </div>
