--- a/dashboard/views/utils/navbar.ejs
+++ b/dashboard/views/utils/navbar.ejs
@@ -1,8 +1,3 @@
-<%
-    const colors = ["text-red", "text-green", "text-blue", "text-yellow"]
-
-    const color = colors[Math.floor(Math.random() * colors.length)]
-%>
 <nav class="flex items-center justify-between flex-wrap bg-teal-500 p-6 dark:bg-gray-secondary bg-white-secondary transition duration-500 ease-in-out">
     <div class="flex items-center flex-shrink-0 <%= "text-" + req.color%> mr-6">
         <a href="/" class="uppercase font-bold hover:text-black dark:hover:text-white">
@@ -94,9 +89,11 @@
             if (classList.includes("dark")) {
                 setCookie("theme", "light")
                 document.documentElement.classList.remove("dark")
+                document.documentElement.classList.add("light")
             } else {
                 setCookie("theme", "dark")
                 document.documentElement.classList.add("dark")
+                document.documentElement.classList.remove("light")
             }
         })
     })
