--- a/dashboard/views/statistics.ejs
+++ b/dashboard/views/statistics.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="<%= res.getLocale() %>">
     <head>
         <%- include("utils/header") %>
     </head>
