--- a/dashboard/public/styles/tailwind.css
+++ b/dashboard/public/styles/tailwind.css
@@ -7,6 +7,7 @@ html, body {
     height: 100%;
 }
 
+/* Gradient */
 .gradient-instagram {
     @apply bg-clip-text bg-gradient-to-r from-instagram-one via-instagram-three to-instagram-six
 }
@@ -19,6 +20,7 @@ html, body {
     @apply bg-clip-text bg-gradient-to-r from-instagram-one via-instagram-three to-instagram-six
 }
 
+/* Important background colors */
 .bg-blue-important {
     @apply bg-blue !important
 }
@@ -34,11 +36,6 @@ html, body {
 .bg-yellow-important {
     @apply bg-yellow !important
 }
-
-/**
- * Tailwind customizations
- * Custom scrollbar
- */
 
 /* width */
 ::-webkit-scrollbar {
@@ -60,4 +57,21 @@ html, body {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #D3D7DB;
+}
+
+/* Add text class */
+.textTheme {
+    @apply dark:text-white text-black;
+}
+
+.bgMainTheme {
+    @apply dark:bg-gray-primary bg-white-primary
+}
+
+.bgTheme {
+    @apply dark:bg-gray-secondary bg-white-secondary;
+}
+
+.animationTheme {
+    @apply transition duration-500 ease-in-out;
 }
